--- a/public/css/arzobispado.css
+++ b/public/css/arzobispado.css
@@ -1,9 +1,9 @@
 .header{
     color: white;
     font-weight: bolder;
-    background-color: #3a8e50; 
+    background-color: #4b6043; 
 }
 .gridRow:hover{
-    background-color: #e5f1e9; 
+    background-color: #ddead1; 
     cursor:pointer;
 }
